[package]
authors = ["yinyanlv <yanlv.yin@gmail.com>"]
name = "runner"
version = "0.0.0"

[dependencies]
chrono = "^0.4.0"
handlebars-iron = "^0.25.2"
iron = "^0.5.1"
mount = "^0.3.0"
mysql = "^12.0.1"
persistent = "^0.3.0"
rand = "^0.3.16"
router = "^0.5.1"
rust-crypto = "^0.2.36"
serde_json = "^1.0.2"
staticfile = "^0.4.0"
toml = "^0.4.5"
urlencoded = "^0.5.0"
