[package]
authors = ["yinyanlv <yanlv.yin@gmail.com>"]
name = "runner"
version = "0.0.0"

[dependencies]
handlebars-iron = "~0.25.2"
hyper = "~0.10.13"
hyper-native-tls = "~0.2.4"
iron = "~0.5.1"
mime = "~0.2.6"
mount = "~0.3.0"
mysql = "~12.0.1"
persistent = "~0.3.0"
rand = "~0.3.16"
router = "~0.5.1"
rust-crypto = "~0.2.36"
serde = "~1.0.14"
serde_derive = "~1.0.14"
serde_json = "~1.0.2"
staticfile = "~0.4.0"
toml = "~0.4.5"
url = "~1.5.1"
urlencoded = "~0.5.0"

[dependencies.iron-sessionstorage]
version = "~0.6.6"
features = ["redis-backend"]

[dependencies.chrono]
version = "~0.4.0"
features = ["serde"]

