[package]
authors = ["yinyanlv <yanlv.yin@gmail.com>"]
name = "runner"
version = "0.0.0"

[dependencies]
handlebars-iron = "~0.25.2"
hyper = "~0.10.13"
hyper-native-tls = "~0.2.4"
iron = "~0.5.1"
lazy_static = "~0.2.8"
lettre = "~0.6.2"
log4rs = "~0.7.0"
mime = "~0.2.6"
mount = "~0.3.0"
multipart = "~0.13.1"
mysql = "~12.0.1"
pulldown-cmark = "~0.1.0"
rand = "~0.3.16"
regex = "~0.2.2"
router = "~0.5.1"
rss = "~0.4.0"
rust-crypto = "~0.2.36"
schedule = "~0.1.0"
serde = "~1.0.14"
serde_derive = "~1.0.14"
serde_json = "~1.0.2"
staticfile = "~0.4.0"
toml = "~0.4.5"
url = "~1.5.1"
urlencoded = "~0.5.0"

[dependencies.chrono]
features = ["serde"]
version = "~0.4.0"

[dependencies.iron-sessionstorage2]
features = ["redis-backend"]
version = "~0.7.1"

[dependencies.uuid]
features = ["v4"]
version = "~0.5.1"
